# Job-Scheduler

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README-ang.md  README.md  final-raport.md
assets/: test-file.txt
examples/: CLI.cpp  CLI.h  ComputeTask.cpp  ComputeTask.h  ComputeTask.hpp  FileTask.cpp  FileTask.h  FileTask.hpp  PingTask.cpp  PingTask.h  PingTask.hpp  main.cpp
include/: AsyncLogger.h  Event.h  LoadBalancer.h  Macros.h  MpscChannel.h  MpscChannel.hpp  PeriodicTask.h  PeriodicTask.hpp  SpscChannel.h  SpscQueue.h  Task.h  Task.hpp  TaskExecutionResult.h  TaskResult.h  TaskStatus.h  ThreadPool.h
src/: AsyncLogger.cpp  LoadBalancer.cpp  MpscChannel.cpp  PeriodicTask.cpp  SpscChannel.cpp  Task.cpp  ThreadPool.cpp
tests/: CMakeLists.txt  MpscChannelTest.cpp  ThreadPoolTest.cpp
